--- a/.github/workflows/gist_update.yml
+++ b/.github/workflows/gist_update.yml
@@ -18,6 +18,9 @@ jobs:
         with:
           python-version: "3.12"
 
+      - name: Install dependencies
+        run: pip install requests
+
       - name: Run smart update script
         run: |
           import os, requests, pathlib
@@ -25,32 +28,25 @@ jobs:
           token = os.environ["GIST_TOKEN"]
           gist_id = "08aeffb9aeaf3d134b4fc993da570f5c"
 
-          # 缓存文件路径
           cache_file = pathlib.Path("zhu_he_last.txt")
 
-          # gist 原始地址
           zhu_he_url = f"https://gist.githubusercontent.com/googledslz/{gist_id}/raw/ZHU_HE"
           fu_xie_a_url = f"https://gist.githubusercontent.com/googledslz/{gist_id}/raw/fu_xie_A"
 
-          # 拉取最新内容
           zhu_he_content = requests.get(zhu_he_url).text.strip()
           fu_xie_a_content = requests.get(fu_xie_a_url).text.strip()
 
-          # 拼接最终内容
           updated_content = zhu_he_content + "\n" + fu_xie_a_content
 
-          # 读取缓存（上次的完整内容）
           old_content = ""
           if cache_file.exists():
               old_content = cache_file.read_text().strip()
 
-          # 对比
           if updated_content == old_content:
               print("✅ ZHU_HE + fu_xie_A 没有变化，跳过更新")
           else:
               print("🔄 检测到变化，准备更新 gist")
 
-              # 更新 gist
               update_url = f"https://api.github.com/gists/{gist_id}"
               headers = {"Authorization": f"token {token}"}
               data = {
@@ -64,7 +60,6 @@ jobs:
               res = requests.patch(update_url, headers=headers, json=data)
               print("Update status:", res.status_code, res.text)
 
-              # 更新缓存为完整内容
               cache_file.write_text(updated_content)
 
         shell: python
