--- a/.github/workflows/Gist_ok1.yml
+++ b/.github/workflows/Gist_ok1.yml
@@ -1,4 +1,4 @@
-name: Smart Sync Gist_ok1
+name: Smart Sync Gist
 
 on:
   schedule:
@@ -13,43 +13,46 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 拉取仓库代码
       - name: Checkout Repo
         uses: actions/checkout@v3
 
-      # 安装 Python
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.12"
 
-      # 安装依赖
       - name: Install dependencies
         run: pip install requests pyyaml
 
-      # 运行主逻辑脚本
       - name: Run smart update script
         run: |
-          import os, requests, pathlib, json, yaml
+          import os, requests, pathlib, yaml
 
           token = os.environ["GIST_TOKEN"]
           gist_id = "08aeffb9aeaf3d134b4fc993da570f5c"
 
           cache_file = pathlib.Path("zhu_he_last.txt")
 
-          # Gist 文件 URL
+          # 获取 Gist 文件内容
           zhu_he_url = f"https://gist.githubusercontent.com/googledslz/{gist_id}/raw/ZHU_HE"
           fu_xie_a_url = f"https://gist.githubusercontent.com/googledslz/{gist_id}/raw/fu_xie_A"
 
-          # 获取最新内容
           zhu_he_content = requests.get(zhu_he_url).text
           fu_xie_a_content = requests.get(fu_xie_a_url).text
 
-          # 解析 YAML，处理 proxies 重复 name
-          data = yaml.safe_load(zhu_he_content)
+          # ===========================
+          # 1️⃣ 解析 YAML，处理 proxies 重复 name
+          # ===========================
+          try:
+              data = yaml.safe_load(zhu_he_content)
+          except Exception:
+              print("⚠️ ZHU_HE 内容不是有效 YAML，跳过 proxies 重命名")
+              data = {}
+
+          updated_flag = False  # 标记是否有变化
+
           if "proxies" in data:
               proxies = data["proxies"]
-              # 重命名重复节点
               seen = {}
               for proxy in proxies:
                   base_name = proxy.get("name", "")
@@ -64,42 +67,44 @@ jobs:
                       proxy["name"] = new_name
                       seen[base_name] += 1
                       seen[new_name] = 1
+                      updated_flag = True  # 重命名后内容发生变化
               data["proxies"] = proxies
 
           # 转回 YAML 字符串
           zhu_he_content_fixed = yaml.dump(data, allow_unicode=True)
 
-          # 防止重复追加 fu_xie_A
+          # ===========================
+          # 2️⃣ 防止重复追加 fu_xie_A
+          # ===========================
           if fu_xie_a_content in zhu_he_content_fixed:
               updated_content = zhu_he_content_fixed
               print("✅ fu_xie_A 已经在 ZHU_HE 中，跳过追加")
           else:
               updated_content = zhu_he_content_fixed + "\n" + fu_xie_a_content
+              updated_flag = True
               print("🔄 追加 fu_xie_A 到 ZHU_HE")
 
-          # 读取缓存
+          # ===========================
+          # 3️⃣ 对比缓存，决定是否更新 Gist
+          # ===========================
           old_content = ""
           if cache_file.exists():
               old_content = cache_file.read_text()
 
-          if updated_content == old_content:
-              print("✅ 内容未变化，跳过更新 Gist")
-          else:
+          if updated_flag or updated_content != old_content:
               print("🔄 内容变化，更新 Gist")
-
-              # 更新 Gist
               update_url = f"https://api.github.com/gists/{gist_id}"
               headers = {"Authorization": f"token {token}"}
-              data = {"files": {"ZHU_HE": {"content": updated_content}}}
-              res = requests.patch(update_url, headers=headers, json=data)
+              data_payload = {"files": {"ZHU_HE": {"content": updated_content}}}
+              res = requests.patch(update_url, headers=headers, json=data_payload)
               print("Update status:", res.status_code, res.text)
-
               # 更新缓存
               cache_file.write_text(updated_content)
+          else:
+              print("✅ 内容未变化，跳过更新 Gist")
 
         shell: python
 
-      # 提交并 push 缓存文件
       - name: Commit cache file
         run: |
           git config user.name "github-actions[bot]"
