--- a/.github/workflows/Gist_ok1.yml
+++ b/.github/workflows/Gist_ok1.yml
@@ -30,7 +30,7 @@ jobs:
 
           token = os.environ["GIST_TOKEN"]
           # gist_id = "08aeffb9aeaf3d134b4fc993da570f5c"
-          gist_id = os.environ["gist_id"]
+          gist_id = os.environ["GIST_ID"]
 
           cache_file = pathlib.Path("zhu_he_last.txt")
 
