--- a/.github/workflows/SUBS_Script.yml
+++ b/.github/workflows/SUBS_Script.yml
@@ -1,4 +1,4 @@
-name: Update Clash Config
+name: 读取 Clash Config
 
 on:
   schedule:
@@ -30,10 +30,14 @@ jobs:
         run: |
           python subs.py
 
-      - name: Push changes
+
+
+      - name: Commit and push changes
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add clash.yaml
           git commit -m "update clash config" || echo "No changes to commit"
           git push
+
+          
