--- a/.github/workflows/SUBS_Script.yml
+++ b/.github/workflows/SUBS_Script.yml
@@ -1,10 +1,12 @@
 name: 读取 Clash Config
 
 
+
 on:
   schedule:
+    # 每天北京时间早上 8 点执行 (UTC 0 点)
     - cron: "0 0 * * *"
-  workflow_dispatch:
+  workflow_dispatch:   # 手动触发
 
 permissions:
   contents: write   # 🔑 关键：允许推送代码
@@ -27,6 +29,11 @@ jobs:
       - name: Install dependencies
         run: |
           pip install requests pyyaml
+
+      - name: Show subscription links
+        run: |
+          echo "=== tmp/1.TXT 内容如下 ==="
+          cat tmp/1.TXT || echo "⚠️ tmp/1.TXT 文件不存在"
 
       - name: Run subs.py
         run: |
