--- a/.github/workflows/SUBS_Script.yml
+++ b/.github/workflows/SUBS_Script.yml
@@ -5,7 +5,9 @@ name: 读取 Clash Config
 on:
   schedule:
     # 每天北京时间早上 8 点执行 (UTC 0 点)
-    - cron: "0 0 * * *"
+    - cron: "22 22 * * *"  # UTC 22:00 = 北京时间 6:00
+    - cron: "0 10 * * *"   # UTC 10:00 = 北京时间 18:00
+    
   workflow_dispatch:   # 手动触发
 
 permissions:
