--- a/.github/workflows/SUBS_Script.yml
+++ b/.github/workflows/SUBS_Script.yml
@@ -28,7 +28,7 @@ jobs:
           python-version: "3.12"
 
       - name: Install dependencies
-        run: pip install requests pyyaml aiohttp
+        run: pip install -r requirements.txt
 
       - name: Print subscription list
         run: cat tmp/1.TXT
