--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,7 @@
-requests
-PyYAML
-requests
-pyyaml
-aiohttp
-requests
-pyyaml
-tqdm
 
+
+requests>=2.30.0
+PyYAML>=6.0
+tqdm>=4.65.0
+aiohttp>=3.8.5
 
